--- a/navigation/choose_classes.html
+++ b/navigation/choose_classes.html
@@ -51,6 +51,17 @@ show_reading_time: false
   position: relative; /* Add relative positioning to button */
 }
 
+/* Style for the period buttons */
+.dropdown-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* Space between the buttons */
+  padding: 20px;
+  align-items: center; /* Center the buttons horizontally */
+  justify-content: center; /* Align the buttons vertically within the container */
+  margin-top: 30px; /* Ensure there is some space from the header */
+}
+
 .dropdown-menu {
   display: none;
   position: absolute; /* Position relative to the button */
@@ -65,17 +76,12 @@ show_reading_time: false
   z-index: 100;
   margin-top: 10px; /* Space between the button and dropdown */
 }
-/* Style for the period buttons */
-.dropdown-container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px; /* Space between the buttons */
-  padding: 20px;
-  align-items: center; /* Center the buttons horizontally */
-  justify-content: center; /* Align the buttons vertically within the container */
-  margin-top: 30px; /* Ensure there is some space from the header */
-}
 
+ /* Show dropdown when the 'show' class is added */
+ .dropdown-menu.show {
+    display: block;
+  }
+  
 .dropdown:hover {
   background: linear-gradient(135deg, #6a6a6a, #2d2d2d); /* Darker gradient on hover */
   transform: scale(1.1); /* Slightly enlarge the button */
@@ -93,13 +99,6 @@ show_reading_time: false
     margin-left: 10px;
   }
 
-
-
-  /* Show dropdown when the 'show' class is added */
-  .dropdown-menu.show {
-    display: block;
-  }
-
   /* Dropdown item styles */
   .class-card {
     background: #222;
@@ -115,6 +114,19 @@ show_reading_time: false
   .class-card:hover {
     background: #444;
   }
+
+  .selected {
+  background: #6a6a6a; /* Selected button background */
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6); /* Larger shadow for selected state */
+  transform: scale(1.05); /* Slightly enlarge the button */
+}
+
+/* Ensure hover state doesn't interfere with the selected state */
+.dropdown:hover:not(.selected) {
+  background: linear-gradient(135deg, #6a6a6a, #2d2d2d); /* Darker gradient on hover */
+  transform: scale(1.1); /* Slightly enlarge the button on hover */
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); /* Larger shadow on hover */
+}
 </style>
 
 
@@ -197,6 +209,17 @@ show_reading_time: false
         // ✅ Button event listener to toggle visibility of dropdown
         button.addEventListener("click", function (event) {
           event.stopPropagation();
+          
+        // Check if this button is already selected
+        const isSelected = button.classList.contains("selected");
+
+        // Remove 'selected' class from all buttons
+        periodDropdowns.forEach((btn) => btn.classList.remove("selected"));
+
+        if (!isSelected) {
+          // Add 'selected' class only if it's not already selected
+          button.classList.add("selected");
+        }
 
           // Close all other dropdowns
           document.querySelectorAll(".dropdown-menu").forEach((menu) => {
