--- a/navigation/ai_homework_bot.html
+++ b/navigation/ai_homework_bot.html
@@ -118,7 +118,7 @@ permalink: /ai_homework_bot/
   } else if (location.hostname === "127.0.0.1") {
     pythonURI = "http://127.0.0.1:8204";
   } else {
-    pythonURI = "https://flocker.nighthawkcodingsociety.com";
+    pythonURI = "https://neptune.stu.nighthawkcodingsociety.com";
   }
 
   const fetchOptions = {
