--- a/navigation/posts.html
+++ b/navigation/posts.html
@@ -13,7 +13,7 @@ permalink: /posts/
   } else if (location.hostname === "127.0.0.1") {
     pythonURI = "http://127.0.0.1:8204";
   } else {
-    pythonURI = "https://flocker.nighthawkcodingsociety.com";
+    pythonURI = "https://neptune.stu.nighthawkcodingsociety.com";
   }
   const fetchOptions = {
     method: "GET", // *GET, POST, PUT, DELETE, etc.
