--- a/navigation/about.html
+++ b/navigation/about.html
@@ -14,7 +14,7 @@ show_reading_time: false
   } else if (location.hostname === "127.0.0.1") {
     pythonURI = "http://127.0.0.1:8204";
   } else {
-    pythonURI = "https://neptune.stu.nighthawkcodingsociety.com";
+    pythonURI = "http://neptune.stu.nighthawkcodingsociety.com";
   }
   const fetchOptions = {
     method: "GET", // *GET, POST, PUT, DELETE, etc.
