--- a/navigation/choose_classes.html
+++ b/navigation/choose_classes.html
@@ -154,7 +154,7 @@ show_reading_time: false
   } else if (location.hostname === "127.0.0.1") {
     pythonURI = "http://127.0.0.1:8204";
   } else {
-    pythonURI = "http://neptune.stu.nighthawkcodingsociety.com";
+    pythonURI = "https://neptune.stu.nighthawkcodingsociety.com";
   }
 
   const fetchOptions = {
