--- a/navigation/authentication/profile.html
+++ b/navigation/authentication/profile.html
@@ -4,7 +4,10 @@ title: Profile Settings
 permalink: /profile
 menu: nav/home.html
 search_exclude: true
-show_reading_time: false     /* Flex container for overall layout */
+show_reading_time: false
+---
+<style>
+  /* Flex container for overall layout */
      .profile-container {
         display: flex;
         justify-content: space-between;
@@ -113,7 +116,7 @@ show_reading_time: false     /* Flex container for overall layout */
         color: red;
         /* Error messages in red */
     }
----
+</style>
 
 <style>
 
