--- a/navigation/authentication/profile.html
+++ b/navigation/authentication/profile.html
@@ -6,9 +6,10 @@ menu: nav/home.html
 search_exclude: true
 show_reading_time: false
 ---
+<!-- Structural Styles -->
 <style>
-  /* Flex container for overall layout */
-     .profile-container {
+    /* Flex container for overall layout */
+    .profile-container {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
@@ -16,24 +17,18 @@ show_reading_time: false
         max-width: 900px;
         margin: auto;
         gap: 20px;
-        background-color: #000;
-        /* Black background for the container */
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-        /* Subtle shadow for contrast */
-        color: #fff;
-        /* White text for contrast */
     }
-
+  
     /* Profile Picture Section */
     .image-section {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 40%;
-        /* Adjust width ratio */
     }
-
+  
     #profileImageBox {
         margin-top: 10px;
         display: flex;
@@ -42,39 +37,30 @@ show_reading_time: false
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        /* Makes the container circular */
         overflow: hidden;
-        /* Ensures the image stays within the circle */
-        border: 3px solid #444;
-        /* Dark grey border */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-        background-color: #000;
-        /* Fallback black background in case of empty space */
+        border: 3px solid;
         cursor: pointer;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     }
-
+  
     #profileImageBox img {
         width: 120%;
         height: 120%;
         object-fit: cover;
-        /* Ensures the image covers the entire container */
         object-position: center center;
-        /* Default: centers horizontally and vertically */
         cursor: pointer;
     }
-
+  
     .file-icon {
         cursor: pointer;
         font-size: 0.9rem;
-        color: #0078D7;
-        /* Light blue for the upload text */
         margin-bottom: 10px;
     }
-
+  
     .file-icon i {
         margin-left: 5px;
     }
-
+  
     /* Form Section */
     .form-section {
         flex: 1;
@@ -82,45 +68,32 @@ show_reading_time: false
         flex-direction: column;
         gap: 20px;
     }
-
+  
     label {
         display: block;
         font-weight: bold;
         margin-bottom: 5px;
-        color: #fff;
-        /* White label text for contrast */
     }
-
+  
     input {
         width: 100%;
         padding: 10px;
         border-radius: 5px;
-        border: 1px solid #555;
-        /* Slightly lighter grey border */
+        border: 1px solid;
         font-size: 1rem;
-        background-color: #333;
-        /* Dark grey background for the textboxes */
-        color: #fff;
-        /* White text for the textboxes */
     }
-
+  
     input::placeholder {
-        color: #aaa;
-        /* Lighter grey placeholder text */
+        opacity: 0.7;
     }
-
+  
     /* Optional message styling */
     #profile-message {
         margin-top: 10px;
         font-size: 0.9rem;
-        color: red;
-        /* Error messages in red */
     }
-</style>
+  </style>
 
-<style>
-
-</style>
 
 
 
