--- a/navigation/posts.html
+++ b/navigation/posts.html
@@ -26,7 +26,7 @@ permalink: /posts/
     },
   };
 
-  const socket = io.connect("http://127.0.0.1:8204");
+  const socket = io.connect("https://neptune.stu.nighthawkcodingsociety.com");
 
   socket.on("connect", () => {
     console.log("Connected to the server");
